@@ -83,9 +83,15 @@ class PublicProperties extends AbstractObjectAnalysis
         // For every not-declared property, we add a another reflection.
         // Those are simply added during runtime
         foreach (array_keys(array_diff_key(get_object_vars($data), $publicProps)) as $key) {
-            $undeclaredProp = new \ReflectionProperty($data, $key);
-            $undeclaredProp->isUndeclared = true;
-            $refProps[] = $undeclaredProp;
+            try {
+                $undeclaredProp = new \ReflectionProperty($data, $key);
+                $undeclaredProp->isUndeclared = true;
+                $refProps[] = $undeclaredProp;
+            } catch (\ReflectionException $e) {
+                // See class comments for more info, what is happening here.
+                $undeclaredProp = new \Brainworxx\Krexx\Service\Misc\ReflectionUndeclaredProperty($data, $key);
+                $refProps[] = $undeclaredProp;
+            }
         }
 
         if (empty($refProps) === true) {
